Refactoring PathSourcePath to be immutable and FakeSourcePath to generate PathSourcePath classes for tests
Summary: Refactoring PathSourcePath to be immutable and FakeSourcePath to generate PathSourcePath classes for tests. Refactoring tests to use FakeSourcePath consistently.

Test Plan:
ant clean && ant
bin/buck build buck
buck test

Reviewed By: asp2insp

fbshipit-source-id: 7a60b3e