@@ -76,7 +76,7 @@ public class JavaLibrarySymbolsFinderTest {
             .addAll(
                 Stream.of("Example1.java", "Example2.java")
                     .map(Paths::get)
-                    .map(p -> new PathSourcePath(projectFilesystem, p))
+                    .map(p -> PathSourcePath.of(projectFilesystem, p))
                     .iterator())
             .add(DefaultBuildTargetSourcePath.of(BuildTargetFactory.newInstance("//foo:bar")))
             .build();
@@ -98,7 +98,7 @@ public class JavaLibrarySymbolsFinderTest {
         TestProjectFilesystems.createProjectFilesystem(tmp.getRoot());
 
     Function<String, SourcePath> convert =
-        src -> new PathSourcePath(projectFilesystem, Paths.get(src));
+        src -> PathSourcePath.of(projectFilesystem, Paths.get(src));
     SourcePath example1 = convert.apply("Example1.java");
     SourcePath example2 = convert.apply("Example2.java");
     final BuildTarget fakeBuildTarget = BuildTargetFactory.newInstance("//foo:GenEx.java");
